--- a/style.css
+++ b/style.css
@@ -301,18 +301,21 @@ article.post:last-of-type {
 
 .my-responsive-nav a {
   text-decoration: none;
-  background-color: var(--primary-color);
-  padding:1.5px 4px;
-  border-radius:50px;
+  /* background-color: var(--primary-color); */
+  color: var(--primary-color);
+  padding:1.5px 4px;  
   font-size: 16px;
-  font-family: "Myriad Pro", sans-serif !important;
-  color:black;
+  font-family: "Myriad Pro", sans-serif !important;  
   text-align:center;
+}
+.my-responsive-nav a:hover {
+  color:white;  
 }
 
 .my-responsive-nav li.current-menu-item a {
-  background-color: white !important;
+  color: white !important;
 } 
+
 .my-responsive-nav ul li ul {
   padding-left: 0 !important;
   padding: 0 !important;
