--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ article.post:last-of-type {
   text-decoration: none;
   /* background-color: var(--primary-color); */
   color: var(--primary-color);
-  padding:1.5px 4px;  
+  padding:4px;  
   font-size: 16px;
   font-family: "Myriad Pro", sans-serif !important;  
   text-align:center;
