--- a/style.css
+++ b/style.css
@@ -1004,6 +1004,6 @@ nav.item.nav-links label {
 
             img{
                 /* border:10px solid #004841 !important; */
-                border: 10px solid transparent;
-                border-image: url("./bg1.png") 30 round;
+                border: 10px solid transparent;                
+                border-image: url("./bg1.png") 30 stretch;
             }
