--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p {
   line-height: 1.65em;
 }
 
-::-moz-selection { /* Code for Firefox */
+/* ::-moz-selection { 
   color: #016e60;
   background: #d2fce8;
 }
@@ -67,7 +67,7 @@ p {
 ::selection {
   color: #016e60;
   background: #d2fce8;
-}
+} */
 
 /* General Layout */
 
