--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ p {
   font-size: 40px;
   max-width: 600px;
   position: relative;
-  color: #b28f5e;
+  color: #215a54;
 }
 
 .heading h1::before,
@@ -107,7 +107,7 @@ p {
   position: absolute;
   top: 30%;
   z-index: -2;
-  background-color: #b28f5e;
+  background-color: #215a54;
 }
 
 .heading h1::before {
